<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.simpalm.sqliteassignment0926.SignUpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        android:background="@android:color/black"
        app:titleTextColor="@android:color/white"></android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/username_signup_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Username" />


    <EditText
        android:id="@+id/password_signup_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_login"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmpass_signup_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signupuser_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/login_margin"
        android:background="@drawable/login_btn"
        android:text="@string/signup" />
</LinearLayout>
