<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nametv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_delete_tv"
                android:textSize="@dimen/login_text_size" />

            <TextView
                android:id="@+id/dobtv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dob_delete_tv" />


            <TextView
                android:id="@+id/numbertv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_delete_tv" />


            <TextView
                android:id="@+id/addresstv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_delete_tv" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/login_margin"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/delete_user_btn"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_delete" />

            <ImageView
                android:id="@+id/modify_user_btn"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_edit" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>



