<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"


    tools:context="com.simpalm.sqliteassignment0926.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_margin"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/login_margin"
            android:src="@drawable/logo" />


        <EditText

            android:id="@+id/username_login_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text_box"
            android:layout_margin="@dimen/login_margin"
            android:background="@android:color/darker_gray"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/Username_login"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/password_login_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text_box"

            android:layout_margin="@dimen/login_margin"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:hint="@string/password_login" />


        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="@dimen/login_margin"
            android:background="@drawable/login_btn"
            android:text="@string/login_btn"
            android:textColor="@android:color/white"
            android:textSize="@dimen/actionbuttonsize" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/login_margin"
            android:background="@drawable/login_btn"
            android:text="@string/signup"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/actionbuttonsize" />


    </LinearLayout>


</ScrollView>



